--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
@@ -50,14 +50,14 @@
 					<td>{{payment.driver}}</td>
 					<td>{{payment.pay_type}}</td>
 					<td>$ {{payment.amount | formatPrice}}</td>
-					<td ng-class="payment.balanced_status">
-						<span ng-if="payment.balanced_failure_reason">
-							<i title="{{payment.balanced_failure_reason}}" class="fa fa-warning"></i>&nbsp;
+					<td ng-class="payment.payment_status">
+						<span ng-if="payment.payment_failure_reason">
+							<i title="{{payment.payment_failure_reason}}" class="fa fa-warning"></i>&nbsp;
 						</span>
-						{{payment.balanced_status}}
-						<i ng-if="!payment.balanced_status">new</i>
+						{{payment.payment_status}}
+						<i ng-if="!payment.payment_status">new</i>
 						&nbsp;&nbsp;
-						<span title="Check payment status" class="link no-underline" ng-if="payment.balanced_status != 'succeeded'" ng-click="payment_status payment.id_payment );"> <i class="fa fa-refresh" ng-class="{'fa-spin': balancedRefresh == payment.id_payment}"></i> </span>
+						<span title="Check payment status" class="link no-underline" ng-if="payment.payment_status != 'succeeded'" ng-click="payment_status( payment.id_payment );"> <i class="fa fa-refresh" ng-class="{'fa-spin': balancedRefresh == payment.id_payment}"></i> </span>
 					</td>
 					<td>{{payment.date}}</td>
 				</tr>
