--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -13,7 +13,7 @@
 
 						<span ng-if="order.status"><b>{{order.status.status}}</b> <span am-time-ago="order.status.timestamp*1000"></span></span>
 						<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
-					<br>ETA: {{ticket.order.eta.time}} minites
+					<br>ETA: {{ticket.order.eta.time}} minutes
 				</div>
 
 
@@ -82,7 +82,7 @@
 		</td></tr>
 		<tr><td class="support-chat-contents">
 			<div class="support-chat-contents-scroll">
-				
+
 				<div ng-repeat="message in ticket.messages" class="support-chat-contents-message" id="suppport-chat-message-{{message.id_support}}" ng-class="{
 				'support-chat-contents-message-support': message.is_support,
 				'support-chat-contents-message-driver': message.is_driver,
@@ -113,13 +113,13 @@
 						<span>{{message.relative}}</span>
 					</div>
 					<div class="support-chat-contents-message-body">{{message.body}}
-						<div ng-repeat="image in message.media"> 
+						<div ng-repeat="image in message.media">
 							<img class="support-side-image" src="{{image}}">
 						</div>
-					
-				
+
+
 					</div>
-					
+
 				</div>
 			</div>
 		</td></tr>
