fixes #5408 customer referral

--- a/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
@@ -17,7 +17,7 @@
 					<select ng-model="query.type" name="searchType" tabindex="2">
 						<option value="all">All</option>
 						<option value="payment">Payments</option>
-						<option value="reimbursement">Reimbusement</option>
+						<option value="reimbursement">Reimbursement</option>
 					</select>
 				</td>
 			</tr>
@@ -41,35 +41,7 @@
 	<div ng-if="!summary.results && !loading" class="box-content2">
 		<p>Not payments yet. Go deliver some food!</p>
 	</div>
-
-	<h1 class="title" ng-if="!loading"><i class="fa fa-users"></i>Customer Referrals</h1>
-	<div class="box-content2 box-content-table" ng-if="summary.referral.invites">
-		<table class="tb-zebra">
-			<tr>
-				<th>Name</th>
-				<th>Date</th>
-				<th>Amount</th>
-			</tr>
-			<tr ng-repeat="invite in summary.referral.invites">
-				<td>{{invite.user.name}}</td>
-				<td>{{invite.date}}</td>
-				<td>${{summary.referral.amount_per_user | formatPrice}}</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td><strong>Total</strong></td>
-				<td>${{summary.referral.invites_total_payment | formatPrice}}</td>
-			</tr>
-		</table>
-	</div>
-
-	<div ng-if="!summary.referral.invites && !loading">
-		<ul class="ul-info box-content2">
-			<li class="li-info">
-				<div ng-include="'assets/view/general-profile-referal.html'"></div>
-			</li>
-		</ul>
-	</div>
+<a class="docs-download-form invite-referral-code-link" href="/invite">Want to earn more money?</a>
 
 </div>
 
