--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -4145,3 +4145,7 @@ h1.title.box-title {
 .bar-loader.bar-loader-search.bar-loader-boxes-top {
 	margin-bottom: 0;
 }
+
+.invite-referral-code-link {
+  font-size: 1.5em;
+}
