--- a/include/views/default/cockpit2/frontend/drivers/drivers-accept-nav.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-accept-nav.phtml
@@ -31,7 +31,7 @@
 		<div class="box-content-nav-box box-content-accepted box-order-status">
 			<div class="message">
 				<div class="dialog-title">You accepted this order</div>
-				<div class="dialog-subtext">@ {{oc.order.status.timestamp*1000 | date: 'h:mm a'}}</div>
+				<div class="dialog-subtext">@ {{oc.order.status.date_timestamp | tsToHour}}</div>
 
 				<a class="order-action-undo" ng-click="oc.undo()">undo</a>
 			</div>
@@ -46,7 +46,7 @@
 		<div class="box-content-nav-box box-content-pickedup box-order-status">
 			<div class="message">
 				<div class="dialog-title">You picked up this order</div>
-				<div class="dialog-subtext">@ {{oc.order.status.timestamp*1000 | date: 'h:mm a'}}</div>
+				<div class="dialog-subtext">@ {{oc.order.status.date_timestamp | tsToHour}}</div>
 
 				<a class="order-action-undo" ng-click="oc.undo()">undo</a>
 			</div>
@@ -60,7 +60,7 @@
 	<div ng-if="oc.order.status.status == 'delivered' && oc.order.status.driver.id_admin == account.user.id_admin">
 		<div class="box-content-nav-box box-content-delivered box-order-status">
 			<div class="message">
-				You delivered this order @ {{oc.order.status.timestamp*1000 | date: 'h:mm a'}}
+				You delivered this order @ {{oc.order.status.date_timestamp | tsToHour}}
 				<br><br>
 				<a class="order-action-undo" ng-click="oc.undo()">undo</a>
 			</div>
