--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -28,7 +28,7 @@
 		<div class="order-item-block-big" ng-if="oc.order.status.status != 'delivered'">
 			<div class="order-icon2"><i class="fa fa-clock-o"></i></div>
 			<div class="order-info2 order-info-small">
-				Ordered @ {{oc.order.time_formated}}<span ng-if="oc.order._delivery_estimated_time">. Deliver by {{oc.order._delivery_estimated_time}}</span>
+				Ordered @ {{oc.order.timestamp | tsToHour}}<span ng-if="oc.order._delivery_estimated_time">. Deliver by {{oc.order._delivery_estimated_time_timestamp | tsToHour}}</span>
 			</div>
 		</div>
 		<br>
