--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -55,6 +55,7 @@
 
 <!-- AngularJS Controllers -->
 <script src="/assets/cockpit/js/controllers.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.resource.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.drivers.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.staff.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.settlement.js?v=<?=Deploy_Server::currentVersion()?>"></script>
@@ -81,6 +82,7 @@
 <!-- AngularJS Directives -->
 <script src="/assets/js/directives.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/directives.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/isteven-multi-select.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
 <script src="/assets/cockpit/js/angular-file-upload.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 
@@ -122,3 +124,4 @@
 <script src="/assets/cockpit/js/angular-cached-resource.min.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.feedback.js?v=<?=Deploy_Server::currentVersion()?>"></script>
 <script src="/assets/cockpit/js/service.metrics.js?v=<?=Deploy_Server::currentVersion()?>"></script>
+<script src="/assets/cockpit/js/service.communityresource.js?v=<?=Deploy_Server::currentVersion()?>"></script>
