--- a/include/views/default/cockpit2/frontend/listview/listview-community-resources.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-community-resources.phtml
@@ -7,6 +7,7 @@
 			<th class="tb-center">Communities</th>
 			<th class="tb-small" nowrap="nowrap">Page</th>
 			<th class="tb-small" nowrap="nowrap">Side</th>
+			<th class="tb-small" nowrap="nowrap">Active</th>
 			<th class="tb-small"></th>
 		</tr>
 		<tr ng-repeat="resource in resources track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/resource/{{resource.id_community_resource}}">
@@ -15,7 +16,7 @@
 			{{resource.name}}
 			</td>
 			<td>
-			{{resource.file}}
+				<a ng-if="resource.path" target="_system" href="{{resource.path}}">{{resource.file}}</a>
 			</td>
 			<td>
 				<span class="tag tag-red" ng-if="resource.all">All</span>
@@ -32,6 +33,10 @@
 			<td nowrap class="tb-center tb-v-center">
 				<span class="tag tag-green" ng-if="resource.side">Yes</span>
 				<span class="tag tag-red" ng-if="!resource.side">No</span>
+			</td>
+			<td nowrap class="tb-center tb-v-center">
+				<span class="tag tag-green" ng-if="resource.active">Active</span>
+				<span class="tag tag-red" ng-if="!resource.active">Inactive</span>
 			</td>
 			<td nowrap class="tb-v-center">
 				<a href="/community/resource/{{resource.id_community_resource}}"><button class="button button-empty button-empty-green"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</button></a>
