--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -190,6 +190,14 @@
 				</table>
 				</a>
 
+				<a href="/resources/" class="menu-link" ng-if="account.user.permissions.GLOBAL && account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'resources')}">
+					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+						<tr>
+							<td class="side-menu-icon"><i class="fa fa-files-o"></i></td>
+							<td class="side-menu-label">Resources</a></td>
+						</tr>
+					</table>
+				</a>
 
 				<a class="menu-link" ng-click="account.logout()" ng-if="account.user.id_admin">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
