Campus Map in sideswipe menu for drivers #5316

--- a/include/views/default/cockpit2/frontend/drivers/drivers-resources.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-resources.phtml
@@ -18,7 +18,7 @@
 			<div class="no-box-content-color">
 
 				<div class="field-container" ng-repeat="community in communities">
-					<div class="field-row" ng-repeat="resource in community.resources">
+					<div class="field-row" ng-repeat="resource in community.resources" ng-if="resource.page">
 						<div class="field-key">
 							<a ng-if="resource.path" target="_system" href="{{resource.path}}">
 								{{resource.name}}
