fixes text change #5451

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -95,8 +95,7 @@
 						Wait, cash?
 					</b>
 					<br>
-					Yup, be sure to carry cash while on shift! A small amount of customers pay with cash, so try to have $20 in small bills with you. You’ll keep the cash the customer pays with, so it’s like getting paid your commission right away.<br><br>
-
+					Yup, be sure to carry cash while on shift! A small amount of customers pay with cash, so try to have $20 in small bills with you. You’ll keep the cash the customer pays with, so it’s like getting paid an advance right away.<br><br>
 					<b>
 						I’ve run out of money for a cash order! What do I do?!
 					</b>
@@ -244,7 +243,8 @@
 					<b>
 						I want to work more shifts. What do I do?
 					</b><br>
-					Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>. You can also text other drivers and offer to drive for them—you can find the other drivers in your community and their numbers on the Shifts page.<br><br>
+					Email us at <a href="mailto:drivers@crunchbutton.com">drivers@crunchbutton.com</a>. You can also text other drivers and offer to drive for them—you can find the other drivers in your community and their numbers on the <a href="/drivers/shifts">Shifts</a> page. If you ever see an unfilled current or upcoming shift on the <a href="/drivers/shifts">Shifts</a> page, you can text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> to snag it!
+					<br><br>
 
 					<b>
 						I can’t drive one of my upcoming shifts. What should I do?
