--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -2279,6 +2279,9 @@ h4.title{
 	width: 100%;
 	padding: .7em 0 .6em 0;
 }
+	.order-item-block-big a{
+		color: #fff;
+	}
 .order-item-block-bigger{
 	width: 100%;
 	line-height: 1.4em;
