--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -59,6 +59,18 @@
 
 			</div>
 		</div>
+
+		<span ng-repeat="resource in oc.order.resources">
+			<div class="divider dots"></div>
+			<div class="order-item-block-big">
+				<div class="order-icon2"><i class="fa fa-files-o"></i></div>
+				<div class="order-info2 order-info-small">
+					<a href="{{resource.path}}" target="_system">{{resource.name}}</a>
+				</div>
+			</div>
+		</span>
+
+
 	</div>
 	<div class="order" ng-if="oc.order.status.driver.id_admin == account.user.id_admin">
 
