--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -190,7 +190,8 @@
 				</table>
 				</a>
 
-				<a href="/resources/" class="menu-link" ng-if="account.user.permissions.GLOBAL && account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'resources')}">
+
+				<a href="/resources/" class="menu-link" ng-if="account.user.permissions.GLOBAL && account.isDriver && menu.toggle=='driver' && account.user.has_resource" ng-class="{'nav-active': (navigation.page == 'community-resources')}">
 					<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 						<tr>
 							<td class="side-menu-icon"><i class="fa fa-files-o"></i></td>
