--- a/include/views/default/cockpit2/frontend/drivers/drivers-pexcard.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-pexcard.phtml
@@ -6,7 +6,18 @@
 
 		<div class="divider"></div>
 
-		<form name="form" novalidate>
+		<div ng-show="account.user.has_pexcard">
+			<div class="support-box-wrap box-content2">
+
+				<div class="box-content-table">
+					<p>
+						Your PEX card is active and will be loaded with money to spend at restaurants when orders come in
+					</p>
+				</div>
+			</div>
+
+		</div>
+		<form name="form" novalidate ng-show="!account.user.has_pexcard">
 
 			<ul ng-class="{'submitted':submitted}" class="ul-inputs">
 
