removed cbtn.io links
fixes #5470

--- a/include/views/default/cockpit/drivers/deliveries/content.phtml
+++ b/include/views/default/cockpit/drivers/deliveries/content.phtml
@@ -23,7 +23,7 @@
 				<td style="vertical-align:top;">
 					<a href="/vieworder/<?php echo $order->uuid; ?>" target="blank">Order #<?php echo $order->id_order; ?></a>
 					<br/>
-					<a href="http://cbtn.io/<?php echo $order->id_order; ?>" target="blank">http://cbtn.io/<?php echo $order->id_order; ?></a>
+					<a href="https://cockpit.la/<?php echo $order->id_order; ?>" target="blank">https://cockpit.la/<?php echo $order->id_order; ?></a>
 					<br />
 					<?php echo $order->restaurant()->name; ?>
 					<br />
