--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -7,7 +7,7 @@
 
 
 	<div ng-if="oc.order.status.status != 'accepted' && oc.order.status.status != 'delivered' && oc.order.status.status != 'rejected' && oc.order.status.driver.id_admin == account.user.id_admin">
-		<div ng-show="!text_customer_5_min_away_sending" ng-if="!oc.order.hasCustomerBeenTexted5Minutes">
+		<div ng-show="!text_customer_5_min_away_sending && !oc.order.hasCustomerBeenTexted5Minutes">
 			<br><br>
 			<button ng-click="oc.text_customer_5_min_away()" id="textCustomer5" class="ladda-button button orange-on-orange" data-color="orange" data-style="zoom-in"><span class="ladda-label">Text Customer I'm 5 Min Away</span></button>
 		</div>
