--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -185,7 +185,7 @@
 			<div class="footer-column-description">
 				<div class="logo"></div>
 				<p>
-					Push a button. Get food. We find the best food from the top local restaurants so you dont have to.
+					Push a button. Get food. We deliver your favorite restaurants straight to your door.
 					<br><br>
 					Mail us: <a href="mailto:{{hello}}">{{hello}}</a><br>
 					Text us: <a href="tel:+1{{textUs}}">{{textUsFormatted}}</a>
