Campus Map in sideswipe menu for drivers #5316

--- a/include/views/default/cockpit2/frontend/listview/listview-community-resources.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-community-resources.phtml
@@ -17,7 +17,7 @@
 			{{resource.name}}
 			</td>
 			<td>
-				<a ng-if="resource.path" target="_system" href="{{resource.path}}">{{resource.file}}</a>
+				<a target="_system" href="{{resource.path}}">{{resource.file}}</a>
 			</td>
 			<td>
 				<span class="tag tag-red" ng-if="resource.all">All</span>
