--- a/include/views/default/crunchbutton/layout/html.body.phtml
+++ b/include/views/default/crunchbutton/layout/html.body.phtml
@@ -124,7 +124,7 @@
 
 
 		<div ng-class="{'button-bottom-show': (navigation.page == 'restaurant' && navigation.order.cart.hasItems() && !notificationBarStatus ), 'button-bottom-show-notification-bar-on': (navigation.page == 'restaurant' && navigation.order.cart.hasItems() && notificationBarStatus )}" class="button-bottom-wrapper button-bottom-bar" data-position="fixed">
-			<button class="button-bottom button-orange" ng-click="navigation.order.submit();"><div>Get Food</div></button>
+			<button class="button-bottom button-orange" ng-click="navigation.order.submit();"><div>Place Order</div></button>
 			<button class="button-bottom button-orange" ng-click="navigation.order.checkout();"><div>Checkout</div></button>
 		</div>
 
