--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -4157,3 +4157,7 @@ h1.title.box-title {
 .invite-referral-code-link {
   font-size: 1.5em;
 }
+
+.li-input textarea.fatal-error-content {
+	height: 9em;
+}
