lots of native app tweaks

--- a/include/views/default/seven/frontend/free-food.phtml
+++ b/include/views/default/seven/frontend/free-food.phtml
@@ -1,6 +1,8 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
+	
+	<div class="home-join-us"></div>
 	<div class="user-account-credit col-box">
 
 		<div class="two-col">
@@ -39,7 +41,7 @@
 				</div>
 
 			<br><br>
-			<p>Your code: <span class="referal-text-spacer"></span><b>{{referral.invite_code}}</b></p>
+			<p>Your code: <span class="referal-text-spacer"></span><b class="allow-select">{{referral.invite_code}}</b></p>
 			<div class="hide-mobile">
 				<br>
 				<p>Invite URL: <span class="referal-text-spacer"></span><input class="referal-text-box" type="text" ng-simulate-read-only="{{referral.cleaned_url()}}" value="http://{{referral.cleaned_url()}}"></p>
