--- a/www/assets/scss/style.scss
+++ b/www/assets/scss/style.scss
@@ -3266,3 +3266,8 @@ i {
 .no-init .hide-before-init {
 	display: none !important;
 }
+
+.allow-select {
+	-webkit-touch-callout: auto;
+	-webkit-user-select: auto;
+}
