--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -28,8 +28,11 @@
 				</div>
 				<div class="hot-dog-relax animated-resize" ng-instant="cherryMessage = (cherryMessage > 7 ? 0 : (cherryMessage + 1))" instant-pass-thru></div>
 				<div class="divider"></div>
-				<div class="order-tagline"><h1>Your order is on its way</h1><h2>and saved for easy 1 click reordering</h2></div>
 			</div>
+		</div>
+		
+		<div class="content-padding">
+			<div class="order-tagline"><p><b>Your order is on its way</b> and saved for easy 1 click reordering</p></div>
 		</div>
 
 		<div class="divider dots spacer-two-one" ng-if="order._new"></div>
