--- a/include/views/default/seven/frontend/work.phtml
+++ b/include/views/default/seven/frontend/work.phtml
@@ -4,7 +4,7 @@
 	<div class="jobs-bubble-wrap">
 		<div class="bubble-curved bubble-curved-green bubble-animated animated-resize">
 			<div class="text" ng-switch="orangeMessage">
-				<span class="single-line" ng-switch-when="1">Free delivery food</span>
+				<span ng-switch-when="1">Free delivery<br>food</span>
 				<span ng-switch-when="2">Free pink gorilla suit</span>
 				<span class="single-line" ng-switch-when="3">Free hugs</span>
 				<span ng-switch-when="4">Now THOSE are benefits!</span>
