fixed a fontawesome upgrade change

--- a/www/assets/scss/seven.scss
+++ b/www/assets/scss/seven.scss
@@ -4086,3 +4086,7 @@ font-familt: "Museo Slab";
 	-webkit-touch-callout: auto !important;
 	-webkit-user-select: auto !important;
 }
+
+.fa {
+	font-size: initial !important;
+}
