--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -210,7 +210,7 @@
 					<b>
 						When do I get my $$$?
 					</b><br>
-					We deposit your payment every Friday. You get to keep all cash received from cash orders as an advance towards that too.<br><br>
+					We deposit your payment every Friday for the previous Mon-Sun. You get to keep all cash received from cash orders as an advance towards that too.<br><br>
 					<a name="shifts"></a>
 					<b>
 						I have a question about my payment.
