--- a/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
@@ -26,6 +26,12 @@
 	<div ng-if="!summary.results && !loading" class="box-content2">
 		<p>Not payments yet. Go deliver some food!</p>
 	</div>
+	<p>
+	<b>When do I get my $$$?</b><br>
+	</p>
+	<p>
+	We deposit your payment every Friday for the previous Mon-Sun. You get to keep all cash received from cash orders as an advance towards that too.
+	</p>
 <a class="docs-download-form invite-referral-code-link" href="/invite">Want to earn more money?</a>
 
 </div>
