--- a/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard-report.phtml
@@ -56,8 +56,8 @@
 					<td>Email</td>
 					<td>Orders</td>
 					<td>Pex Card Spent</td>
-					<td>Card Orders Spent</td>
-					<td>Card and Cash Orders Spent</td>
+					<td>Should Have Spent</td>
+					<td>Card and Cash Orders Total Price</td>
 					<td>Diff</td>
 				</tr>
 			</thead>
@@ -80,7 +80,7 @@
 				</tr>
 
 				<tr class="tb-mini-grid title" ng-show="driver.details && driver.transactions.length">
-					<th colspan="9"><strong>Pex Card</strong></th>
+					<th colspan="9"><strong>Spent with Pex Card</strong></th>
 				</tr>
 				<tr class="tb-mini-grid subtitle" ng-show="driver.details && driver.transactions.length">
 					<th colspan="3"><strong>Date</strong></th>
@@ -94,7 +94,7 @@
 				</tr>
 
 				<tr class="tb-mini-grid title" ng-show="driver.details && driver.delivered_orders.length">
-					<th colspan="9">Orders</th>
+					<th colspan="9">Orders Where Pex Should've Been Used</th>
 				</tr>
 				<tr class="tb-mini-grid subtitle" ng-show="driver.details && driver.delivered_orders.length">
 					<th colspan="3"><strong>Date</strong></th>
