--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-form.phtml
@@ -219,13 +219,23 @@
 				</div>
 			</li>
 
-			<li class="li-input" ng-class="{'error':form.driverHourly.$invalid}">
-				<div class="label">Hourly:</div>
+			<li class="li-input" ng-class="{'error':form.payInfoPaymentType.$invalid}">
+				<div class="label">Pay Structure</div>
 				<div class="input">
-					<select ng-model="driver.hourly" required name="driverHourly" ng-options="type.value as type.label for type in _yesNo"></select>
+					<select ng-model="driver.payment_type" required name="payInfoPaymentType" ng-options="type.value as type.label for type in payment_types"></select>
 				</div>
 				<div class="box-error">
-					<small ng-show="form.driverHourly.$error.required">Required.</small>
+					<small ng-show="form.payInfoPaymentType.$error.required">Required.</small>
+				</div>
+			</li>
+
+			<li class="li-input" ng-class="{'error':form.payInfoHourRate.$invalid}" ng-show="driver.payment_type=='hours' || driver.payment_type=='hours_without_tips' || driver.payment_type=='making_whole'">
+				<div class="label">Hour Rate</div>
+				<div class="input">
+					<input type="number" ignore-mouse-wheel name="payInfoHourRate" ng-required="driver.payment_type=='hours' || driver.payment_type=='hours_without_tips' || driver.payment_type=='making_whole'" ng-model="driver.hour_rate" placeholder="0.00">
+				</div>
+				<div class="box-error">
+					<small ng-show="form.payInfoHourRate.$error.required">Required.</small>
 				</div>
 			</li>
 
