--- a/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-payinfo.phtml
@@ -42,7 +42,7 @@
 						</li>
 
 						<li class="li-input" ng-class="{'error':form.payInfoPaymentType.$invalid}">
-							<div class="label">Payment Type</div>
+							<div class="label">Pay Structure</div>
 							<div class="input">
 								<select ng-model="payInfo.payment_type" required name="payInfoPaymentType" ng-options="type.value as type.label for type in payment._types"></select>
 							</div>
@@ -51,10 +51,10 @@
 							</div>
 						</li>
 
-						<li class="li-input" ng-class="{'error':form.payInfoHourRate.$invalid}" ng-show="payInfo.payment_type=='hours'">
+						<li class="li-input" ng-class="{'error':form.payInfoHourRate.$invalid}" ng-show="payInfo.payment_type=='hours' || payInfo.payment_type=='hours_without_tips' || payInfo.payment_type=='making_whole'">
 							<div class="label">Hour Rate</div>
 							<div class="input">
-								<input type="number" ignore-mouse-wheel name="payInfoHourRate" ng-required="payInfo.payment_type=='hours'" ng-model="payInfo.hour_rate" placeholder="0.00">
+								<input type="number" ignore-mouse-wheel name="payInfoHourRate" ng-required="payInfo.payment_type=='hours' || payInfo.payment_type=='hours_without_tips' || payInfo.payment_type=='making_whole'" ng-model="payInfo.hour_rate" placeholder="0.00">
 							</div>
 							<div class="box-error">
 								<small ng-show="form.payInfoHourRate.$error.required">Required.</small>
@@ -120,7 +120,7 @@
 				</form>
 			</div>
 		</div>
-		
+
 		<div class="support-box-wrap box-content2">
 			<div class="support-box-wrap-header">
 				<h1>Bank Info</h1>
